	* Incremented the library ABI version to 16:1:1.
	* Incremented the package version to 0.20.1.
2020-05-05 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyNode::productName()' and 'SyNode::setProductName()'
	methods.
	* Added an 'SyLwrpClient::productName()' method.
2020-05-07 Fred Gleason <fredg@paravelsystems.com>
	* Added more device signatures to 'SyNode::productName()'.
2020-05-07 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'SyNode::productName()' to include the DEVN string
	when reporting unrecognized devices.
2020-05-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a type in 'sy/synode.cpp'.
2020-05-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 17:0:2.
	* Incremented the package version to 0.21.0.
2020-06-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the RPM packaging that failed to enforce version
	consistency between the base and '-devel' packages.
2020-06-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.21.1.
2020-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'SyLwrpClient::setGpoSourceAddress()' method
	that broke operation for GPIO endpoints.
2020-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 17:1:2.
	* Incremented the package version to 0.21.2.
2021-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Updated Qt dependency to Qt5.
2021-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Changed the library SONAME from 'Switchyard' to 'Switchyard5'.
2021-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' target to generate the RPM datestamp
	automatically.
2021-07-21 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in that caused the header files to be installed in
	the incorrect location.
2022-05-31 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up multiple build warnings.
2022-06-01 Fred Gleason <fredg@paravelsystems.com>
	* Debianized the source tree.