@@ -720,3 +720,5 @@
 	* Cleaned up multiple build warnings.
 2022-06-01 Fred Gleason <fredg@paravelsystems.com>
 	* Debianized the source tree.
+2022-06-17 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'SySignalNotifier' class.
